test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod
  labels:
    env: prod  
spec:
  containers:
  - name: curl-container
    image: curlimages/curl
    command: ["sh", "-c", "sleep 3600"]
