ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - host: np.9d9b706f-4a45-4ce9-8515-6e773004f7cb.lb.civo.com
    http:
      paths:
      - path: /public
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
