np.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy 
metadata:
  name: allow-get-public
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            env: prod
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/public"
